# asif-todo-app

./: .env.docker.example  .env.example  .gitignore  CHECK_ALL_PHASES.md  CLAUDE.md  CLOUD_NATIVE_BLUEPRINTS_DEMO.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOY_NOW.md  DOCKER_DEMO_GUIDE.md  DOCKER_SETUP.md  DOCKER_SETUP_COMPLETE.md  Dockerfile.huggingface  EMAIL_SETUP.md  FEATURE_REVIEW.md  FINAL_REPORT.md  FINAL_TESTING.md  HUGGINGFACE_SETUP.md  KUBERNETES_SETUP.md  MANUAL_TEST_CHECKLIST.md  PHASE_3_PREPARATION.md  PHASE_3_SETUP_GUIDE.md  PHASE_3_STATUS.md  PHASE_4_5_SUMMARY.md  PHASE_4_COMPLETE.md  PHASE_4_STATUS.md  QUICK_TEST_GUIDE.md  RAILWAY_DEPLOYMENT.md  README.huggingface.md  README.md  REUSABLE_INTELLIGENCE_DEMO.md  SENDGRID_SETUP.md  STATUS.md  SUBMISSION_GUIDE.md  SUMMARY.txt  TEST_REPORT.md  TROUBLESHOOTING.md  UI_IMPROVEMENTS.md  VERCEL_DEPLOY.md  (+19 more)
.spec-kit/: config.yaml
app/: layout.tsx  page.tsx
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README_HF.md  deploy_hf.ps1  deploy_hf.sh  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  email_service.py  file_utils.py  main.py  scheduler.py
backend/app/ai/: __init__.py  agent.py  openai_client.py  prompts.py  tools.py
backend/app/models/: __init__.py  conversation.py  file.py  task.py  user.py
backend/app/routers/: admin.py  auth.py  chat.py  files.py  notifications.py  tasks.py
backend/mcp/: __init__.py  config.py  tools.py
backend/uploads/: README.md
components/: AuthGuard.tsx  Chatbot.tsx
k8s/: README.md  (+14 more)
(+62 files in other folders)
