[project]
name = "taskflow-backend"
version = "1.0.0"
description = "TaskFlow Backend API - GIAIC Hackathon Phase II"
authors = [{name = "Asif Ali AstolixGen"}]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "openai>=2.20.0",
    "python-dotenv>=1.2.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "sendgrid>=6.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
